# ms-layout-generation

./: .pre-commit-config.yaml  pyproject.toml
Coarse-to-Fine/: README.md  pyproject.toml  pytest.ini
Coarse-to-Fine/src/coarse_to_fine/: c2f_generator.py  c2f_trainer.py  coarse2fine_pln.sh  coarse2fine_rico.sh  cut_hierarchy.py  main.py
Coarse-to-Fine/tests/: conftest.py  test_imports.py
Coarse-to-Fine/tests/integration/: test_c2f_training_pipeline.py  test_layoutformer_integration.py
Coarse-to-Fine/tests/unit/: test_c2f_generator.py  test_c2f_model.py  test_c2f_trainer.py  test_c2f_utils.py  test_cut_hierarchy.py  test_layers_attention.py  test_layers_basic_blocks.py  test_layers_functional.py  test_layers_improved_transformer.py  test_layers_positional_encoding.py  test_layers_transformer.py  test_layers_utils.py  test_main_utils.py
LayoutDiffusion/: .coveragerc  README.md  pyproject.toml  pytest.ini
LayoutDiffusion/improved-diffusion/improved_diffusion/: discrete_diffusion.py  dist_util.py  distributed.py  gaussian_diffusion.py  text_datasets.py  train_util.py  transformer_model.py
LayoutDiffusion/improved-diffusion/scripts/: train.py
LayoutDiffusion/src/layout_diffusion/: __init__.py
LayoutDiffusion/tests/: conftest.py  test_imports.py
LayoutDiffusion/tests/e2e/: test_real_checkpoints.py  test_rico_generation.py
LayoutDiffusion/tests/integration/: test_training_inference_pipeline.py  test_training_single_gpu.py
LayoutDiffusion/tests/unit/: test_eval_base_dataset.py  test_eval_data_load.py  test_eval_draw_from_results.py  test_eval_metrics.py  test_eval_transforms.py  test_eval_utils.py  test_eval_visualization.py  test_gaussian_diffusion.py  test_improved_discrete_diffusion.py  test_improved_dist_resample_respace.py  test_improved_gaussian_diffusion_extra.py  test_improved_logger.py  test_improved_losses_nn_fp16.py  test_improved_rounding_test_util.py  test_improved_script_util.py  test_improved_transformer_model.py  test_json2metrics.py  test_json2metrics_inprocess.py  test_layoutnet.py  test_noise_schedule.py  test_scripts.py  test_seq2layout_steps.py  test_text_datasets.py  test_train_util.py
LayoutDiffusion/util_scripts/: seq2layout_steps.py
LayoutFormer++/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini
LayoutFormer++/src/layoutformer_pp/: __init__.py  main.py
LayoutFormer++/src/layoutformer_pp/data/: base.py
LayoutFormer++/src/layoutformer_pp/evaluation/: metrics.py
LayoutFormer++/src/layoutformer_pp/model/: utils.py
LayoutFormer++/src/layoutformer_pp/scripts/: publaynet_completion.sh  publaynet_gen_r.sh  publaynet_gen_t.sh  publaynet_gen_ts.sh  publaynet_refinement.sh  publaynet_ugen.sh  rico_completion.sh  rico_gen_r.sh  rico_gen_t.sh  rico_gen_ts.sh  rico_refinement.sh  rico_ugen.sh
LayoutFormer++/src/layoutformer_pp/tasks/: completion.py  gen_r.py  gen_t.py  multitask.py  refinement.py  task_config.py  task_utils.py  ugen.py
LayoutFormer++/src/layoutformer_pp/trainer/: __init__.py  basic_trainer.py  ds_trainer.py  generator.py  multitask_trainer.py  utils.py
LayoutFormer++/src/layoutformer_pp/utils/: config.py  utils.py
LayoutFormer++/tests/: conftest.py  test_imports.py
LayoutFormer++/tests/e2e/: test_parse_then_place_pipeline.py  test_refinement_inference.py
LayoutFormer++/tests/integration/: test_gen_t_roundtrip.py  test_task_utils_parse_seq.py  test_train_eval_pipeline.py  test_trainer_with_real_data.py
LayoutFormer++/tests/unit/: test_main.py
LayoutFormer++/tests/unit/data/: test_dataset_metadata.py  test_load.py  test_transforms.py
LayoutFormer++/tests/unit/evaluation/: test_layoutnet.py  test_metrics.py
LayoutFormer++/tests/unit/ir/: test_batching.py  test_ir_transforms.py
LayoutFormer++/tests/unit/layout_placement/: test_constraints.py
LayoutFormer++/tests/unit/model/: test_constraints_utils.py  test_layout_transformer.py  test_layout_transformer_model.py  test_tokenizer.py
LayoutFormer++/tests/unit/semantic_parser/: test_parsers.py
LayoutPrompter/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
LayoutPrompter/src/layoutprompter/: __init__.py  parsing.py  preprocess.py  ranker.py  selection.py  serialization.py  transforms.py  visualization.py
LayoutPrompter/tests/: conftest.py  test_imports.py
LayoutPrompter/tests/integration/: test_real_data_pipeline.py
LayoutPrompter/tests/unit/: test_clip_text_encoder.py  test_parsing.py  test_preprocess.py  test_ranker.py  test_selection.py  test_serialization.py  test_transforms.py  test_utils.py  test_visualization.py
Parse-Then-Place/: README.md  pyproject.toml
Parse-Then-Place/src/parse_then_place/: __init__.py
Parse-Then-Place/tests/: conftest.py  test_imports.py
Parse-Then-Place/tests/unit/: test_collate_fn.py  test_ir_processor.py  test_sp_dataset.py  test_text_processor.py
(+63 files in other folders)
