[build-system]
requires = ["uv-build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[project]
name = "layout-diffusion"
version = "0.0.1"
description = "LayoutDiffusion: Improving Graphic Layout Generation by Discrete Diffusion Probabilistic Models"
requires-python = ">=3.9,<3.11"
dependencies = [
  "einops",
  "huggingface_hub==0.4.0",
  "numpy",
  "pillow",
  "pycocotools==2.0.11",
  "pytorch_fid==0.2.1",
  "scipy==1.10.1",
  "seaborn==0.11.2",
  "spacy==3.2.4",
  "torch",
  "torchaudio",
  "torchvision",
  "typing-inspect==0.8.0",
  "typing_extensions==4.5.0",
]
