[build-system]
requires = ["uv-build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[project]
name = "parse-then-place"
version = "0.0.1"
description = "Parse-Then-Place: Generating Graphic Layouts from Text"
requires-python = ">=3.9,<3.11"
dependencies = [
  "adapter_transformers==3.0.1",
  "deepspeed==0.5.10",
  "lark",
  "matplotlib",
  "numpy",
  "pytorch_fid",
  "PyYAML",
  "scipy",
  "SentencePiece",
  "torch",
  "torchaudio",
  "torchvision",
  "tqdm",
  "transformers==4.19.4",
  "wandb==0.12.10",
]
